--- a/src/zadanieApp/.vscode/tasks.json
+++ b/src/zadanieApp/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/src/zadanieApp/zadanieApp.csproj",
+                "${workspaceFolder}/zadanieApp.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/src/zadanieApp/zadanieApp.csproj",
+                "${workspaceFolder}/zadanieApp.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -33,7 +33,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/src/zadanieApp/zadanieApp.csproj"
+                "${workspaceFolder}/zadanieApp.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
